Updating version for 1.0.9 release

--- a/edgelet/contrib/config/windows/config.yaml
+++ b/edgelet/contrib/config/windows/config.yaml
@@ -160,7 +160,7 @@ agent:
   type: "docker"
   env: {}
   config:
-    image: "mcr.microsoft.com/azureiotedge-agent:1.0.9-rc6"
+    image: "mcr.microsoft.com/azureiotedge-agent:1.0.9"
     auth: {}
 
 ###############################################################################
