--- a/builds/checkin/edgelet.yaml
+++ b/builds/checkin/edgelet.yaml
@@ -175,11 +175,15 @@ jobs:
           curl -L https://raw.github.com/eriwen/lcov-to-cobertura-xml/8c55cd11f80a21e7e46f20f8c81fcde0bf11f5e5/lcov_cobertura/lcov_cobertura.py -o lcov_cobertura.py
         workingDirectory: edgelet
         displayName: Install code coverage tools
+      - script: df .
+        workingDirectory: edgelet
       - script: $CARGO build --verbose
         displayName: Build
         workingDirectory: edgelet
       - script: $CARGO test --verbose
         displayName: Test
+        workingDirectory: edgelet
+      - script: df .
         workingDirectory: edgelet
       - script: |
           zip -0 target/ccov.zip `find ./target \( -name "*.gc*" \) -print`
@@ -189,11 +193,15 @@ jobs:
         workingDirectory: edgelet
         env:
           COVERAGE_EXCLUDES: $(coverage.excludes)
+      - script: df .
+        workingDirectory: edgelet
       - task: PublishCodeCoverageResults@1
         displayName: Publish code coverage results
         inputs:
           codeCoverageTool: cobertura
           summaryFileLocation: "edgelet/target/coverage.xml"
+      - script: df .
+        workingDirectory: edgelet
       - task: mspremier.BuildQualityChecks.QualityChecks-task.BuildQualityChecks@5
         displayName: "Check build quality"
         inputs:
