--- a/builds/checkin/edgelet.yaml
+++ b/builds/checkin/edgelet.yaml
@@ -184,16 +184,19 @@ jobs:
       - script: |
           zip -1 target/ccov.zip `find ./target \( -name "*.gc*" \) -print`
           ./grcov target/ccov.zip -s . -t lcov --llvm --branch --ignore-not-existing --ignore-dir "/*" --ignore-dir "*docker-rs*" > target/lcov.info
-          python lcov_cobertura.py target/lcov.info --output target/coverage.xml --demangle --base-dir $(Build.SourcesDirectory)/edgelet -e "${COVERAGE_EXCLUDES}"
+          python lcov_cobertura.py target/lcov.info --output ./coverage.xml --demangle --base-dir $(Build.SourcesDirectory)/edgelet -e "${COVERAGE_EXCLUDES}"
         displayName: Assemble code coverage results
         workingDirectory: edgelet
         env:
           COVERAGE_EXCLUDES: $(coverage.excludes)
+      - script: rm -rf ./target/*
+        displayName: Cleanup build and test artifacts
+        workingDirectory: edgelet
       - task: PublishCodeCoverageResults@1
         displayName: Publish code coverage results
         inputs:
           codeCoverageTool: cobertura
-          summaryFileLocation: "edgelet/target/coverage.xml"
+          summaryFileLocation: "edgelet/coverage.xml"
       - task: mspremier.BuildQualityChecks.QualityChecks-task.BuildQualityChecks@5
         displayName: "Check build quality"
         inputs:
