--- a/mqtt/mqtt3/Cargo.toml
+++ b/mqtt/mqtt3/Cargo.toml
@@ -11,6 +11,7 @@ futures-core = "0.3"
 futures-channel = { version = "0.3", features = ["sink"] }
 futures-sink = "0.3"
 futures-util = { version = "0.3", features = ["sink"] }
+lazy_static = "1.4.0"
 log = "0.4"
 tokio = { version = "0.2", features = ["time"] }
 tokio-util = { version = "0.2", features = ["codec"] }
