--- a/edge-hub/src/Microsoft.Azure.Devices.Edge.Hub.Service/Microsoft.Azure.Devices.Edge.Hub.Service.csproj
+++ b/edge-hub/src/Microsoft.Azure.Devices.Edge.Hub.Service/Microsoft.Azure.Devices.Edge.Hub.Service.csproj
@@ -1,10 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup Condition="'$(DotNet_Runtime)' != 'netcoreapp3.0'">
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-  </PropertyGroup>
 
-  <PropertyGroup Condition="'$(OS)|$(DotNet_Runtime)' == 'Unix|netcoreapp3.0'">
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+  <Import Project="..\..\..\dotnetVersion.props" />
+
+  <PropertyGroup>
     <!--
     MVC requires compilation context to be available. Compilation context tells it if 
     a library references MVC which is used as a filter to skip assemblies that are deemed 
