--- a/builds/misc/images.yaml
+++ b/builds/misc/images.yaml
@@ -349,7 +349,7 @@ jobs:
     workspace:
       clean: all
     variables:
-      NetCorePackageUri: https://download.microsoft.com/download/4/0/9/40920432-3302-47a8-b13c-bbc4848ad114/dotnet-sdk-2.1.302-win-x64.zip
+      NetCorePackageUri: https://dotnet.microsoft.com/download/dotnet-core/thank-you/sdk-3.1.200-windows-x64-binaries 
     steps:
       - powershell: scripts/windows/setup/Install-Prerequisites.ps1 -DotnetSdkUrl $(NetCorePackageUri) -Dotnet -Nuget
         name: install
