--- a/mqtt/mqtt-broker/Cargo.toml
+++ b/mqtt/mqtt-broker/Cargo.toml
@@ -10,11 +10,15 @@ edition = "2018"
 async-trait = "0.1"
 bincode = "1.2"
 chrono = "0.4"
+config = "0.10"
 fail = "0.3"
 failure = "0.1"
 flate2 = "1.0"
 futures-util = { version = "0.3", features = ["sink"] }
-lazy_static = "1"
+humantime = "2.0"
+humantime-serde = "1.0"
+lazy_static = "1.4"
+regex = "1"
 serde = { version = "1.0", features = ["derive", "rc"] }
 tokio = { version = "0.2", features = ["blocking", "stream", "sync", "tcp"] }
 tokio-io-timeout = "0.4"
@@ -31,7 +35,9 @@ bytes = "0.5"
 fail = { version = "0.3", features = ["failpoints"] }
 matches = "0.1"
 proptest = "0.9"
+serde_json = "1.0"
 tempfile = "3"
+test-case = "1.0.0"
 tokio = { version = "0.2", features = ["dns", "macros"] }
 tracing-subscriber = "0.1"
 
