revert roll version azureiotedge-runtime base

--- a/builds/misc/images.yaml
+++ b/builds/misc/images.yaml
@@ -355,7 +355,7 @@ jobs:
 
       - powershell: scripts/windows/setup/Install-Prerequisites.ps1 -DotnetSdkUrl $(NetCorePackageUri) -Dotnet -Nuget
         name: install
-        displayName: Install
+        displayName: Install Prerequisites
 
       - script: echo $(registry.password)|docker login "edgebuilds.azurecr.io" -u "$(registry.user)" --password-stdin
         displayName: Docker Login
