comment for arm64 func

--- a/builds/misc/images.yaml
+++ b/builds/misc/images.yaml
@@ -277,7 +277,7 @@ jobs:
           imageName: azureiotedge-analyzer
           project: TestAnalyzer
           
-      # Functions Sample
+      # Functions Sample - Not supported on arm64
       - template: templates/image-windows.yaml
         parameters:
           name: Functions Sample
