--- a/builds/misc/images.yaml
+++ b/builds/misc/images.yaml
@@ -201,7 +201,7 @@ jobs:
     workspace:
       clean: all
     variables:
-      NetCorePackageUri: https://download.visualstudio.microsoft.com/download/pr/ac85ccb0-e761-489f-b5dd-ba5e52735c2b/dd89fcc72092ff6fc7f5f4cb9eea0de4/dotnet-sdk-3.1.200-win-x64.zip
+      NetCorePackageUri: https://download.visualstudio.microsoft.com/download/pr/56131147-65ea-47d6-a945-b0296c86e510/44b43b7cb27d55081e650b9a4188a419/dotnet-sdk-3.1.201-win-x64.exe
     steps:
       - template: templates/install-dotnet3.yaml
 
