--- a/mqtt/mqtt-broker/Cargo.toml
+++ b/mqtt/mqtt-broker/Cargo.toml
@@ -29,9 +29,11 @@ mqtt3 = { path = "../mqtt3", features = ["serde1"] }
 [dev-dependencies]
 atty = "0.2"
 bytes = "0.5"
+criterion = "0.3"
 fail = { version = "0.3", features = ["failpoints"] }
 matches = "0.1"
 proptest = "0.9"
+rand = "0.3"
 tempfile = "3"
 tokio = { version = "0.2", features = ["dns", "macros"] }
 tracing-subscriber = "0.1"
@@ -40,3 +42,6 @@ tracing-subscriber = "0.1"
 name = "persist_failpoints"
 required-features = ["fail/failpoints"]
 
+[[bench]]
+name = "file_persist_bench"
+harness = false
