--- a/builds/ci/dotnet.yaml
+++ b/builds/ci/dotnet.yaml
@@ -36,10 +36,11 @@ jobs:
         inputs:
           packageType: sdk
           version: $(dotnet.version)
-      - script: |
-          sudo apt-get update
-          sudo apt-get install -y libsnappy1v5
-        displayName: Install libsnappy1v5 # Needed for rocksdb integration tests
+      - task: Bash@3
+        displayName: Install Prerequisites needed for RocksDB integration tests
+        inputs:
+          filePath: scripts/linux/installPrereqs.sh
+          arguments: -u $(NetCorePackageUriLinux)
       - pwsh: |
           $store = [System.Security.Cryptography.X509Certificates.X509Store]::new('Root', 'CurrentUser')
           $store.Open('ReadWrite')
