--- a/builds/e2e/e2e.yaml
+++ b/builds/e2e/e2e.yaml
@@ -4,13 +4,13 @@ pr: none
 resources:
   pipelines:
   - pipeline: images
-    source: $(az.pipeline.images)
+    source: '$(az.pipeline.images)'
     trigger:
       branches:
       - master
       - release/*
   - pipeline: packages
-    source: $(az.pipeline.packages)
+    source: '$(az.pipeline.packages)'
     trigger:
       branches:
       - master
