--- a/builds/e2e/templates/e2e-setup.yaml
+++ b/builds/e2e/templates/e2e-setup.yaml
@@ -18,13 +18,25 @@ steps:
       TestRootCaKey,
       TestRootCaPassword
 
-- download: images
-  artifact: '$(az.pipeline.images.artifacts)'
-  # patterns: '$(az.pipeline.images.artifacts)/artifactInfo.txt'
+# - download: images
+#   artifact: '$(az.pipeline.images.artifacts)'
+#   patterns: '$(az.pipeline.images.artifacts)/artifactInfo.txt'
 
-- download: packages
-  artifact: '$(artifactDir)'
-  # patterns: '$(artifactDir)/*'
+- task: DownloadBuildArtifacts@0
+  displayName: Get Docker image info
+  inputs:
+    buildType: specific
+    project: $(resources.pipeline.images.projectID)
+    pipeline: $(resources.pipeline.images.pipelineName)
+    buildVersionToDownload: specific
+    buildId: $(resources.pipeline.images.runID)
+    downloadType: single
+    artifactName: $(az.pipeline.images.artifacts)
+    itemPattern: $(az.pipeline.images.artifacts)/artifactInfo.txt
+
+# - download: packages
+#   artifact: '$(artifactDir)'
+#   patterns: '$(artifactDir)/*'
 
 # - task: DownloadBuildArtifacts@0
 #   displayName: Download edgelet packages
