--- a/builds/e2e/templates/e2e-setup.yaml
+++ b/builds/e2e/templates/e2e-setup.yaml
@@ -24,14 +24,14 @@ steps:
 
     if ('$(az.pipeline.images.buildId)')
     {
-      Write-Output ">> User supplied az.pipeline.images.buildId=$(az.pipeline.images.buildId)"
-      $imageBuildId = $(az.pipeline.images.buildId)
+      Write-Output '>> User supplied az.pipeline.images.buildId=$(az.pipeline.images.buildId)'
+      $imageBuildId = '$(az.pipeline.images.buildId)'
     }
 
     if ('$(az.pipeline.packages.buildId)')
     {
-      Write-Output ">> User supplied az.pipeline.packages.buildId=$(az.pipeline.packages.buildId)"
-      $packageBuildId = $(az.pipeline.packages.buildId)
+      Write-Output '>> User supplied az.pipeline.packages.buildId=$(az.pipeline.packages.buildId)'
+      $packageBuildId = '$(az.pipeline.packages.buildId)'
     }
 
     Write-Output "##vso[task.setvariable variable=imageBuildId]$imageBuildId"
