Update the test cases

--- a/builds/e2e/benchmark.yaml
+++ b/builds/e2e/benchmark.yaml
@@ -146,6 +146,10 @@ jobs:
           container.registry.username: '$(edgebuilds-azurecr-io-username)'
           container.registry.password: '$(edgebuilds-azurecr-io-pwd)'
           edgeHub.storageSizeByte: '$(edgeHub.storageSizeByte)'
+          edgeHub.amqpProtocolHead: '$(edgeHub.amqpProtocolHead)'
+          edgeHub.mqttProtocolHead: '$(edgeHub.mqttProtocolHead)'
+          edgeHub.httpProtocolHead: '$(edgeHub.httpProtocolHead)'
+          edgeAgent.storageSizeByte: '$(edgeAgent.storageSizeByte)'
           iotHub.connectionString: '$(EdgeConnectivityTestHubConnString)'
           eventHub.connectionString: '$(EdgeConnectivityEventHubConnString)'
           deploymentFileName: '$(deploymentFileName)'
