--- a/edge-agent/test/Microsoft.Azure.Devices.Edge.Agent.Kubernetes.IntegrationTest/Microsoft.Azure.Devices.Edge.Agent.Kubernetes.IntegrationTest.csproj
+++ b/edge-agent/test/Microsoft.Azure.Devices.Edge.Agent.Kubernetes.IntegrationTest/Microsoft.Azure.Devices.Edge.Agent.Kubernetes.IntegrationTest.csproj
@@ -17,6 +17,8 @@
     <ItemGroup>
         <PackageReference Include="CliWrap" Version="2.4.0" />
         <PackageReference Include="FluentAssertions" Version="5.9.0" />
+        <PackageReference Include="Microsoft.Azure.Devices" Version="1.20.1" />
+        <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.25.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
         <PackageReference Include="Nito.AsyncEx" Version="5.0.0" />
         <PackageReference Include="xunit" Version="2.4.1" />
